$mol_view: continue render after error, render min-height everywhere to prevent jumps on scroll

--- a/speck/speck.view.css
+++ b/speck/speck.view.css
@@ -1,7 +1,8 @@
 [mol_speck] {
 	font-size: .75rem;
 	border-radius: 1rem;
-	margin: -.75em;
+	margin: 0 -.75em;
+	align-self: flex-start;
 	min-height: 1em;
 	min-width: .5em;
 	vertical-align: sub;
